--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: python
 python:
-  - "2.7"
-  - "3.2" # no rpy2 support for Python3
+  - "2.7_with_system_site_packages"
+  # - "3.2" # no rpy2 or biopython support for Python3
   - "3.3"
-virtualenv:
-  system_site_packages: true
 before_install:
  - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml python-biopython python-xlwt python-scikits-learn  python-cluster
  - sudo apt-get install -qq python3-scipy python3-numpy python3-setuptools
  - sudo easy_install3 pip
  - sudo pip3.3 install biopython
  - sudo pip3.3 install rpy2
-
 
 # - git clone https://github.com/pymzml/pymzML.git
 # - "cd pymzML && python setup.py install && cd .."
