--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 python:
+  - "2.7"
   - "2.7_with_system_site_packages"
   # - "3.2" # no rpy2 or biopython support for Python3
   - "3.3"
@@ -16,4 +17,4 @@ install:
   - sudo pip install rpy2 # for Python 3.3
   - travis_retry python setup.py develop
 script: "nosetests -w test/"
-cache: apt
+cache: pip
