--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 # - git clone https://github.com/pymzml/pymzML.git
 # - "cd pymzML && python setup.py install && cd .."
 install:
-  - sudo pip install rpy2 # for Python 3.3
+  - pip install rpy2 # for Python 3.3
   - travis_retry python setup.py develop
 script: "nosetests -w test/"
 cache: pip
