--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,12 @@ before_install:
  - "cd scikit-datasmooth && python setup.py install && cd .."
 install:
   - pip install rpy2 # for Python 3.3
+  - pip install numpy
+  - pip install scipy
+  - pip install biopython
   - travis_retry python setup.py develop
 script: 
   - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then nosetests -w test/; fi
   - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then nosetests -a '!python2' test; fi
 cache: pip
+
