--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ python:
 virtualenv:
   system_site_packages: true
 before_install:
- - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml python-biopython python-xlwt python-scikits-learn  python-cluster
+ - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml python-biopython python-xlwt python-scikits-learn python-cluster cython
+ - git clone https://github.com/hroest/cylowess.git
+ - "cd cylowess && sudo python setup.py install && cd .."
 # - git clone https://github.com/pymzml/pymzML.git
 # - "cd pymzML && python setup.py install && cd .."
 install:
