--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.3"
 before_install:
  - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml python-biopython python-xlwt python-scikits-learn  python-cluster
- - sudo apt-get install -qq r-base-dev
+ - sudo apt-get install -qq r-base-dev python-dev
 # - git clone https://github.com/pymzml/pymzML.git
 # - "cd pymzML && python setup.py install && cd .."
  - git clone https://github.com/hroest/scikit-datasmooth.git
