--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ before_install:
  - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml python-biopython python-xlwt python-scikits-learn  python-cluster
  - sudo apt-get install -qq r-base-dev python-dev
  - ls /usr/share/
+ - ls /usr/share/R/
  - ls /usr/share/R/include/R_ext/
+ - head /usr/share/R/include/R_ext/Lapack.h
+ - md5sum /usr/share/R/include/R_ext/Lapack.h
 # - git clone https://github.com/pymzml/pymzML.git
 # - "cd pymzML && python setup.py install && cd .."
  - git clone https://github.com/hroest/scikit-datasmooth.git
