--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   # - "3.2" # no rpy2 or biopython support for Python3
   - "3.3"
 before_install:
- - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml 
+# - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml 
  - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn 
  - sudo apt-get install -qq python-cluster
 # - git clone https://github.com/pymzml/pymzML.git
@@ -18,6 +18,7 @@ install:
   #  we use 2.2.5 (same as Ubuntu precise 12.04)
   - pip install -U setuptools
   - pip install rpy2==2.2.5
+  - pip install numpy
   - travis_retry python setup.py develop
 script: 
   - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then nosetests -w test/; fi
