--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
   - "3.3"
 before_install:
 # - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml 
- - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn 
- - sudo apt-get install -qq python-cluster
+# - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn 
+# - sudo apt-get install -qq python-cluster
 # - git clone https://github.com/pymzml/pymzML.git
 # - "cd pymzML && python setup.py install && cd .."
  - git clone https://github.com/hroest/scikit-datasmooth.git
