--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
  - sudo apt-get update
  - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml 
  - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn 
-# - sudo apt-get install -qq python-cluster
+ - sudo apt-get install -qq python-cluster
 # - git clone https://github.com/pymzml/pymzML.git
 # - "cd pymzML && python setup.py install && cd .."
  - git clone https://github.com/hroest/scikit-datasmooth.git
@@ -18,7 +18,8 @@ install:
   #  note rpy2 > 2.5.6 (certainly > 2.6.1) will NOT work with R 2.x any more!
   #  we use 2.2.5 (same as Ubuntu precise 12.04)
   - pip install -U setuptools
-  - pip install rpy2==2.2.5
+  # - pip install rpy2==2.2.5
+  - pip install rpy2
   - pip install numpy
   - travis_retry python setup.py develop
 script: 
