--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,21 @@ python:
   - "2.7_with_system_site_packages"
   # - "3.2" # no rpy2 or biopython support for Python3
   - "3.3"
+  - "3.4"
 before_install:
  - sudo apt-get update
  - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml 
  - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn 
  - sudo apt-get install -qq python-cluster
-# - git clone https://github.com/pymzml/pymzML.git
-# - "cd pymzML && python setup.py install && cd .."
  - git clone https://github.com/hroest/scikit-datasmooth.git
  - "cd scikit-datasmooth && python setup.py install && cd .."
 install:
   # make sure we have the newest setuptools
   - pip install -U setuptools
   # for Python 2.7 and 3.3 w/o system packages, install rpy2 manually
-  #  for Ubuntu 12.04, we have only R 2.x available and thus need an older rpy2
-  #  version (2.2.5) would work:
-  # - pip install rpy2==2.2.5
-  #  for Ubuntu 14.04, we have R 3.x available
-  # - pip install rpy2
+  #   For Ubuntu 12.04, we have only R 2.x available and thus need an older rpy2
+  #   version (2.2.5). For Ubuntu 14.04, we have R 3.0.x available which is
+  #   still too old for the newest rpy2.
   - pip install rpy2==2.2.5
   - pip install numpy
   - travis_retry python setup.py develop
