--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - pip install rpy2==2.2.5
   - travis_retry python setup.py develop
 script: 
+  # site packages cannot use statsmodels for the moment as the statsmodels of 12.04 are too old
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7_with_system_site_packages ]]; then nosetests -a '!statsmodels' -w test/; fi
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then nosetests -w test/; fi
   - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then nosetests -w test/; fi
