--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   #   version (2.2.5). For Ubuntu 14.04, we have R 3.0.x available which is
   #   still too old for the newest rpy2.
   - pip install rpy2==2.2.5
+  - pip install statsmodels
   - travis_retry python setup.py develop
 script: 
   - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then nosetests -w test/; fi
