--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 before_install:
  - sudo apt-get update
  - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml 
- - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn 
+ - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn python-statsmodels
  - git clone https://github.com/hroest/scikit-datasmooth.git
  - "cd scikit-datasmooth && python setup.py install && cd .."
 install:
@@ -19,7 +19,7 @@ install:
   #   version (2.2.5). For Ubuntu 14.04, we have R 3.0.x available which is
   #   still too old for the newest rpy2.
   - pip install rpy2==2.2.5
-  - pip install statsmodels
+  - pip install -U statsmodels
   - travis_retry python setup.py develop
 script: 
   - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then nosetests -w test/; fi
