--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 before_install:
  - sudo apt-get update
  - sudo apt-get install -qq python-numpy python-scipy python-rpy2 python-lxml 
- - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn python-statsmodels
+ - sudo apt-get install -qq python-biopython python-xlwt python-scikits-learn python-scikits.statsmodels
  - git clone https://github.com/hroest/scikit-datasmooth.git
  - "cd scikit-datasmooth && python setup.py install && cd .."
 install:
