--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,9 @@ before_install:
 install:
   # make sure we have the newest setuptools
   - pip install -U setuptools
-  # for Python 2.7 and 3.3 w/o system packages, install rpy2 manually
   #   For Ubuntu 12.04, we have only R 2.x available and thus need an older rpy2
-  #   version (2.2.5). For Ubuntu 14.04, we have R 3.0.x available which is
-  #   still too old for the newest rpy2.
+  #   version (2.2.5). For Ubuntu 14.04, we have R 3.0.x available which works
+  #   with rpy2 2.3.9 (see trusty packages).
   #   However, for Python 3.4 / 3.5 the older version of rpy2 wont work
   #   (we thus disable the tests).
   - pip install rpy2==2.3.9
